--- a/src/components/ChatV2/MessageList/Message/Message.css
+++ b/src/components/ChatV2/MessageList/Message/Message.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
 }
-.message .notification { 
+
+.message .notification {
   display: flex;
   justify-content: center;
   color: #99999988;
@@ -13,7 +14,7 @@
 
 .message .username {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   color: #999;
   font-weight: 600;
   font-size: 12px;
@@ -22,9 +23,9 @@
 }
 
 .message.mine .username {
-  justify-content: end;
+  justify-content: flex-end;
   margin-right: 10px;
-} 
+}
 
 .message .bubble-container {
   font-size: 14px;
@@ -81,11 +82,12 @@
 .user-container .bubble-container {
   margin-left: 50px;
 }
-.message.start .user-container .bubble-container  {
+
+.message.start .user-container .bubble-container {
   margin-left: 0px;
 }
 
-.thumbnail { 
+.thumbnail {
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -103,7 +105,7 @@
 }
 
 .mine .user-container {
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .bubble {
