--- a/src/common/CommonStyles.scss
+++ b/src/common/CommonStyles.scss
@@ -69,23 +69,28 @@ html {
     }
 }
 
-@for $i from 0 through 20{
+@for $i from 0 through 20 {
     $value: $i * 5px;
+
     .brtr-#{$i} {
         border-top-right-radius: $value !important;
     }
+
     .brtl-#{$i} {
         border-top-left-radius: $value !important;
     }
+
     .brbr-#{$i} {
         border-bottom-right-radius: $value !important;
     }
+
     .brbl-#{$i} {
         border-bottom-left-radius: $value !important;
     }
+
     .br-#{$i} {
         border-radius: $value !important;
-    }    
+    }
 }
 
 .m-auto {
@@ -340,7 +345,10 @@ html {
     overflow-y: hidden !important;
 }
 
-.max-z-index{
-    z-index: 10000;
+.max-z-index {
+    z-index: 10000 !important;
 }
 
+.flex-col {
+    flex-direction: column !important;
+}
