--- a/src/common/CommonStyles.scss
+++ b/src/common/CommonStyles.scss
@@ -253,23 +253,23 @@ html {
 }
 
 .align-start {
-    align-items: flex-start;
+    align-items: flex-start !important;
 }
 
 .align-end {
-    align-items: flex-end;
+    align-items: flex-end !important;
 }
 
 .justify-left {
-    justify-content: flex-start;
+    justify-content: flex-start !important;
 }
 
 .justify-right {
-    justify-content: flex-end;
+    justify-content: flex-end !important;
 }
 
 .justify-between {
-    justify-content: space-between;
+    justify-content: space-between !important;
 }
 
 // postions
