--- a/src/components/ChatV2/ConversationList/ConversationSearch/ConversationSearch.css
+++ b/src/components/ChatV2/ConversationList/ConversationSearch/ConversationSearch.css
@@ -28,7 +28,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  max-width: 500px;
+  max-width: 80%;
+  min-width: 50%;
   background-color: white;
   border: 2px solid white;
   box-shadow: 24;
