--- a/src/components/ChatV2/MessageList/MessageList.css
+++ b/src/components/ChatV2/MessageList/MessageList.css
@@ -2,10 +2,11 @@
   overflow-y: auto;
   padding-left: 6px;
   padding-bottom: 24px;
-  height: calc(100vh - 165px);
   background-color: #f4f7ff;
   border-radius: 10px;
-  box-shadow: inset -5px -5px 9px rgba(255,255,255,0.45), inset 5px 5px 9px rgba(94,104,121,0.3);
+  width: 100%;
+  overflow-x: hidden;
+  box-shadow: inset -5px -5px 9px rgba(255, 255, 255, 0.45), inset 5px 5px 9px rgba(94, 104, 121, 0.3);
 }
 
 /* Define a style for the track */
@@ -43,4 +44,13 @@
   font-weight: 400;
   text-align: center;
   margin-top: 20px;
+}
+
+.message-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
