--- a/src/components/ChatV2/ChatV2Index.scss
+++ b/src/components/ChatV2/ChatV2Index.scss
@@ -2,10 +2,11 @@
   display: grid;
   width: 100%;
   background: #eeeef1;
-  height: 100%;
   grid-template-columns: 350px auto 350px;
   grid-column-gap: 1px;
   grid-row-gap: 1px;
+  height: calc(100vh - 88px);
+
 }
 
 .container {
