complete css for module mesenger

--- a/src/components/ChatV2/ChatV2Index.scss
+++ b/src/components/ChatV2/ChatV2Index.scss
@@ -1,5 +1,5 @@
 .messenger {
-  display: grid;
+  // display: grid;
   width: 100%;
   background: #eeeef1;
   grid-template-columns: 350px auto 350px;
@@ -25,12 +25,14 @@
   background: white;
   grid-row-start: 1;
   grid-row-end: span 3;
+  height: calc(100vh - 88px);
 }
 
 .content {
   background: white;
   grid-row-start: 1;
   grid-row-end: span 3;
+  height: calc(100vh - 88px);
 }
 
 @media (max-width: 992px) {
