--- a/src/components/ChatV2/InfoList/InfoListStyles.scss
+++ b/src/components/ChatV2/InfoList/InfoListStyles.scss
@@ -16,13 +16,16 @@
   margin-top: 10px;
   font-size: 16;
   font-weight: 500;
+  text-align: center;
 }
+
 .info-description {
   margin-bottom: 10px;
   font-size: 16;
   font-weight: 400;
   font-style: italic;
 }
+
 .no-info {
   color: #999;
   font-weight: 400;
@@ -72,23 +75,27 @@
 
 /* Define a style for the handle or thumb */
 .participants-container::-webkit-scrollbar-thumb {
-  background-color: #43a4ff; /* Change the color as needed */
+  background-color: #43a4ff;
+  /* Change the color as needed */
   border-radius: 4px;
 }
 
 /* Define a style for the track */
 .participants-container::-webkit-scrollbar-track {
-  background-color: #f0f0f0; /* Change the color as needed */
+  background-color: #f0f0f0;
+  /* Change the color as needed */
 }
 
 /* Optional: Change the appearance on hover */
 .participants-container::-webkit-scrollbar-thumb:hover {
-  background-color: #006bb3; /* Change the color as needed */
+  background-color: #006bb3;
+  /* Change the color as needed */
 }
 
 /* Optional: Change the appearance when dragging */
 .participants-container::-webkit-scrollbar-thumb:active {
-  background-color: #2574c3; /* Change the color as needed */
+  background-color: #2574c3;
+  /* Change the color as needed */
 }
 
 .participant-photo {
@@ -121,7 +128,7 @@
   font-size: 12px;
 }
 
-.list-item{
+.list-item {
   display: flex;
   align-items: center;
   padding: 6px 0px 6px 10px;
@@ -131,7 +138,7 @@
   transition: all linear 0.1s;
 }
 
-.list-item:hover{
+.list-item:hover {
   background-color: #DDDDDD;
   box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
 }
