--- a/src/common/ToastNotification/ToastNotification.scss
+++ b/src/common/ToastNotification/ToastNotification.scss
@@ -11,6 +11,7 @@
             border-radius: 50%;
             object-fit: cover;
             object-position: center;
+            max-width: 50px;
         }
 
     }
