--- a/src/DiAyTiOverridingStyles.scss
+++ b/src/DiAyTiOverridingStyles.scss
@@ -44,3 +44,14 @@
     background-color: white;
     border-radius: 8px;
 }
+
+
+.disableLeftSideBarItem {
+    opacity: 0.7;
+    background-color: transparent !important;
+
+    &:hover {
+        cursor: not-allowed;
+        background-color: transparent !important;
+    }
+}
